--- a/src/Developer.Assignment.Infrastructure/Developer.Assignment.Infrastructure.csproj
+++ b/src/Developer.Assignment.Infrastructure/Developer.Assignment.Infrastructure.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Developer.Assignment.Application\Developer.Assignment.Application.csproj" />
+  </ItemGroup>
+
 </Project>
