--- a/src/Developer.Assignment.App.Host/Developer.Assignment.App.Host.csproj
+++ b/src/Developer.Assignment.App.Host/Developer.Assignment.App.Host.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net8.0</TargetFramework>
+    <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <IsAspireHost>true</IsAspireHost>
@@ -11,6 +11,11 @@
 
   <ItemGroup>
     <PackageReference Include="Aspire.Hosting.AppHost" Version="8.2.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Developer.Assignment.Api\Developer.Assignment.Api.csproj" />
+    <ProjectReference Include="..\Developer.Assignment.Presentation\Developer.Assignment.Presentation.csproj" />
   </ItemGroup>
 
 </Project>
