--- a/src/Developer.Assignment.Domain/Developer.Assignment.Domain.csproj
+++ b/src/Developer.Assignment.Domain/Developer.Assignment.Domain.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="FluentResults" Version="4.0.0" />
+    <PackageReference Include="MediatR" Version="13.0.0" />
+  </ItemGroup>
+
 </Project>
