--- a/src/Developer.Assignment.Infrastructure/Developer.Assignment.Infrastructure.csproj
+++ b/src/Developer.Assignment.Infrastructure/Developer.Assignment.Infrastructure.csproj
@@ -12,6 +12,9 @@
 
   <ItemGroup>
     <PackageReference Include="Dapper" Version="2.1.66" />
+    <PackageReference Include="FluentResults" Version="4.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.7" />
+    <PackageReference Include="Microsoft.Extensions.Options" Version="9.0.7" />
     <PackageReference Include="Npgsql" Version="9.0.3" />
   </ItemGroup>
 
