Added some blazor code and added some tests using webapplicationfactory and testcontainers.

--- a/src/Developer.Assignment.Presentation/Developer.Assignment.Presentation.csproj
+++ b/src/Developer.Assignment.Presentation/Developer.Assignment.Presentation.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Developer.Assignment.Application\Developer.Assignment.Application.csproj" />
     <ProjectReference Include="..\Developer.Assignment.Service.Defaults\Developer.Assignment.Service.Defaults.csproj" />
   </ItemGroup>
 
